<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_F7"
    android:orientation="vertical"
    tools:context="com.rui.xb.purple.ui.activity.me.address.AddressAddActivity">

    <View
        style="@style/line_1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white_FF"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_12">

        <LinearLayout style="@style/ll_rl_52">

            <TextView
                style="@style/tv_black_333_14sp"
                android:text="@string/receiver" />

            <EditText
                android:id="@+id/et_receive_name"
                style="@style/tv_gray_666_14sp"
                android:layout_marginLeft="@dimen/dp_32"
                android:background="@null"
                android:hint="@string/edit_receiver_name"
                android:paddingBottom="@dimen/dp_10"
                android:paddingRight="@dimen/dp_150"
                android:paddingTop="@dimen/dp_10" />
        </LinearLayout>

        <View style="@style/line_1dp" />

        <LinearLayout style="@style/ll_rl_52">

            <TextView
                style="@style/tv_black_333_14sp"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/tv_gray_666_14sp"
                android:layout_marginLeft="@dimen/dp_32"
                android:background="@null"
                android:hint="@string/edit_phone"
                android:paddingBottom="@dimen/dp_10"
                android:paddingRight="@dimen/dp_200"
                android:paddingTop="@dimen/dp_10" />
        </LinearLayout>

        <View style="@style/line_1dp" />

        <RelativeLayout style="@style/ll_rl_52">

            <TextView
                android:id="@+id/temp_tv_area"
                style="@style/tv_black_333_14sp"
                android:text="@string/address_region" />

            <TextView
                android:id="@+id/tv_province"
                style="@style/tv_gray_666_14sp"
                android:layout_marginLeft="@dimen/dp_19"
                android:layout_toRightOf="@id/temp_tv_area"
                android:text="上海市 闵行区" />

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_20"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View style="@style/line_1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:background="@color/bg_white_FF"
            android:paddingBottom="@dimen/dp_18"
            android:paddingRight="@dimen/dp_20"
            android:paddingTop="@dimen/dp_18">

            <TextView
                android:id="@+id/temp_add"
                style="@style/tv_black_333_14sp"
                android:text="@string/address_detail" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_19"
                android:layout_toRightOf="@id/temp_add"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/edit_address_detail"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>

        <View style="@style/line_1dp" />

        <RelativeLayout style="@style/ll_rl_52">

            <TextView
                style="@style/tv_black_333_14sp"
                android:text="@string/set_default_address" />

            <ToggleButton
                android:id="@+id/tg_btn_set_default"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/toggle_choose_selector"
                android:textOff="@null"
                android:textOn="@null" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/main"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white" />

</android.support.v7.widget.LinearLayoutCompat>
