<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12">

        <TextView
            android:id="@+id/tv_add_name"
            style="@style/tv_black_333_14sp"
            />

        <TextView
            android:id="@+id/tv_add_phone"
            style="@style/tv_black_333_14sp"
            android:layout_alignParentRight="true"
             />


        <TextView
            android:id="@+id/tv_add_detail"
            style="@style/tv_gray_666_12sp"
            android:layout_below="@id/tv_add_name"
            android:layout_marginTop="@dimen/dp_5"
             />

        <View
            android:id="@+id/temp_line1"
            style="@style/line_1dp"
            android:layout_below="@id/tv_add_detail"
            android:layout_marginTop="@dimen/dp_8" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12">

        <LinearLayout
            android:id="@+id/ll_set_default"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_set_default"
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:src="@mipmap/selected_no" />

            <TextView
                style="@style/tv_black_333_12sp"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/default_address" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:src="@mipmap/delete" />

            <TextView
                style="@style/tv_black_333_12sp"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/ll_delete"
            android:layout_marginRight="@dimen/dp_12"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:src="@mipmap/index_record_green" />

            <TextView
                style="@style/tv_black_333_12sp"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/edit" />
        </LinearLayout>

    </RelativeLayout>

    <View
        style="@style/line_10dp"/>

</android.support.v7.widget.LinearLayoutCompat>
